--- a/ReadMe
+++ b/ReadMe
@@ -8,3 +8,6 @@ https://colab.research.google.com/drive/1bxLj0BGehxcG8djCa7B-6JYdtZtdJmQx?usp=sh
 
 Exploratory data analysis (EDA) for Crop Price
 https://colab.research.google.com/drive/12rs0DQEK119_nZ5S6lBLCSJUf2wF7BXO?usp=sharing
+
+Coding with Models including Neural Network, Ensemble Learning, LSTM
+https://colab.research.google.com/drive/1ULoXpvVdcQ9qEsmS-smz5Hr6j7OSncNm?usp=sharing
